<resources>
    <!--string name="app_name">ANZ Mobile Pay Root Detection Bypass</string-->
    <string name="app_name">KoalaCloak</string>



    <string name="Paypal">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=QNQDESEMGWDPY</string>
    <string name="XDAThread">http://forum.xda-developers.com/xposed/modules/xposed-anz-mobile-pay-root-detection-t3340845</string>
    <string name="SourceCode">https://github.com/pbombnz/ANZMobilePayRootDetectionBypass</string>



    <string name="MainActivity__menu_main__Donate">Donate</string>
    <string name="MainActivity__menu_main__Contact">Contact Me</string>
    <string name="MainActivity___menu_main__SourceCode">Source Code</string>
    <string name="MainActivity__menu_main__XDAThread">XDA Thread</string>
    <string name="MainActivity__menu_main__About">About</string>

    <string name="MainActivity_PreferenceFragment__anzMobilePayPrefs_title">ANZ Mobile Pay</string>
    <string name="MainActivity_PreferenceFragment__anzMobilePayPrefs_summary">Toggle settings to hide root and debug/developer options for ANZ Mobile Pay.</string>
    <string name="MainActivity_PreferenceFragment__anzShieldPrefs_title">ANZ Shield</string>
    <string name="MainActivity_PreferenceFragment__anzShieldPrefs_summary">Toggle settings to hide debug/developer options from ANZ Shield.</string>
    <string name="MainActivity_PreferenceFragment__westpacPrefs_title">Westpac Mobile Banking (Untested Feature)</string>
    <string name="MainActivity_PreferenceFragment__westpacPrefs_summary">Toggle settings to hide root from the Westpac Mobile Banking application.\n\nPlease Note this is an untested feature, therefore if you use it please tell me the whether it succeeded for you or not.</string>
    <string name="MainActivity_PreferenceFragment__commbankPrefs_title">Commbank (Untested Feature)</string>
    <string name="MainActivity_PreferenceFragment__commbankPrefs_summary">Toggle settings to hide root from the Commbank Banking application.\n\nPlease Note this is an untested feature, therefore if you use it please tell me the whether it succeeded for you or not.</string>

    <string name="MainActivity_PreferenceFragment__debug_title">Debug Mode</string>
    <string name="MainActivity_PreferenceFragment__debug_summary">This allows special debug messages and output to be displayed in Xposed Logs and/or logcat.</string>



    <string name="ContactActivity_label">Contact Me</string>
    <string name="ContactActivity_XDAThreadButton">XDA Thread</string>
    <string name="ContactActivity_EmailButton">Email (Preferred)</string>
    <string name="ContactActivity_TwitterButton">Twitter</string>
    <string name="ContactActivity_BodyMessage">
        Depending on the issue, I might not always be the best person to contact. If you
        have a payment issue, most likely contact the application provider or your bank for support.
        If you are having root detection problem or the module is not working then its best to
        contact me via XDA or email.\n
        \n
        You can contact me using any of the methods below where you can send me feedback,
        bug reports, feature requests or to simply follow me on social media for updates.\n
        \n
        Remember to actually write an actual message when contacting me!
        You\'d be surprised how many people emailed me with no message.
    </string>



    <string name="AboutActivity_label">About</string>
    <string name="AboutActivity_author_logo">PBomb Logo</string>
    <string name="AboutActivity_author_title">Author</string>
    <string name="AboutActivity_author_1"><a href="https://github.com/PBombNZ/">Prashant B. (PBombNZ)</a></string>
    <string name="AboutActivity_contributer_title">Libraries Used and Contributions</string>
    <string name="AboutActivity_contributer_text_1">rovo89 - <a href="https://github.com/rovo89/">Xposed Bridge Framework</a></string>
    <string name="AboutActivity_LicenseAndCP_title">License &amp; Copyright</string>
    <string name="AboutActivity_LicenseAndCP_text">
        Copyright 2016 Prashant B.\n
        &lt;pbomb.nz@gmail.com&gt;\n
        \n
        This source code of this program is distributed under the terms of the GNU General Public License v3.
    </string>
    <string name="AboutActivity_disclaimer_title">Disclaimer</string>
    <string name="AboutActivity_disclaimer_message">
        The author and contributors of KoalaCloak take no responsibility for any loss of data,
        monetary loss, damage to your device or any other consequences that arise as a result of
        using this program.\\n\\nUSE AT YOUR OWN RISK.
    </string>



    <string name="NestedPreferenceActivity_PreferenceFragment__PreferenceCategory_title">Application Toggles</string>

    <string name="NestedPreferenceActivity_PreferenceFragment__anzMobilePaySystemIntegrity_title">System Integrity Checking</string>
    <string name="NestedPreferenceActivity_PreferenceFragment__anzMobilePaySystemIntegrity_summary">This will bypass all the various system integrity checks so your device appears as if it was unmodified to ANZ.</string>
    <string name="NestedPreferenceActivity_PreferenceFragment__anzMobilePayDeveloperSettings_title">Hide Debugging/Developer Options</string>
    <string name="NestedPreferenceActivity_PreferenceFragment__anzMobilePayDeveloperSettings_summary">This will tell ANZ Mobile Pay that debug/developer options are disabled even when they are enabled. Handy for Developers.</string>
    <string name="NestedPreferenceActivity_PreferenceFragment__anzShieldDeveloperSettings_title">Hide Debugging/Developer Options</string>
    <string name="NestedPreferenceActivity_PreferenceFragment__anzShieldDeveloperSettings_summary">This will tell ANZ Shield that debug/developer options are disabled even when they are enabled. Handy for Developers.</string>
    <string name="NestedPreferenceActivity_PreferenceFragment__westpacRootDetection_title">Root Detection</string>
    <string name="NestedPreferenceActivity_PreferenceFragment__westpacRootDetectionRootDetection_summary">This will bypass root detection which allows you to enabled Tap\'n\'Pay on your mobile device.</string>
    <string name="NestedPreferenceActivity_PreferenceFragment__commbankRootDetection_title">Root Detection</string>
    <string name="NestedPreferenceActivity_PreferenceFragment__commbankRootDetectionRootDetection_summary">This will bypass root detection which allows you to enabled Tap\'n\'Pay on your mobile device.</string>
</resources>
