<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nz.pbomb.xposed.anzmods2.activities.AboutActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16sp"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="42sp"
                android:src="@drawable/pbomb_banner"
                android:contentDescription="@string/AboutActivity_author_logo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:text="@string/AboutActivity_author_title"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/AboutActivity_author_1"
                android:id="@+id/AboutActivity__textView__author_1"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/AboutActivity_contributer_title"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/AboutActivity_contributer_text_1"
                android:id="@+id/AboutActivity__textView__contributer_text_1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/AboutActivity_LicenseAndCP_title"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="center"
                android:text="@string/AboutActivity_LicenseAndCP_text"
                android:linksClickable="true"
                android:autoLink="email"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/AboutActivity_disclaimer_title"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/AboutActivity_disclaimer_message"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
